--- a/lugx.css
+++ b/lugx.css
@@ -148,6 +148,7 @@ header{
 }
 
 @media(max-width:576px){
+
     .dropdownmenu{
         left: 2rem;
         width:unset;
@@ -300,11 +301,13 @@ header{
 }
 @media(max-width:572px){ 
     .fristsection{
+        margin-right: 0;
         padding: 5rem 0;
+        /* display: none; */
     }
-     .fristsection .container{
+    .fristsection .container{
         flex-direction: column; 
-}
+    }
     .main_banner{
         display: flex;
         flex-direction: column;
@@ -324,6 +327,9 @@ header{
     }
 }
 @media (min-width:600px) and (max-width:992px){
+    .fristsection{
+        margin-right: 0;
+    }
     .main_banner_content{
         width: 50%;
         padding-left: 2rem;
@@ -474,9 +480,14 @@ header{
 }
 @media  (max-width:572px){
     .boxcollection{
+        margin-right: 0;
+        /* display: none; */
+    }
+    .boxcollection{
         display: flex;
         flex-wrap: wrap;
         margin-bottom: 15rem;
+        /* display: none; */
     }
     .boxcollectionboxes{
  
@@ -484,8 +495,8 @@ header{
         height: 80%;
         background-color: rgb(255, 255, 255);
         border-radius: 3rem;
-        margin-left: 1.5rem;
-        gap: 5rem;
+        margin-left:0.4rem;
+        gap: 2rem;
         box-shadow: 2px 2px 2px 2px;
     }
     .icons i{
@@ -497,6 +508,9 @@ header{
     }
 }
 @media (min-width:600px) and (max-width:972px){
+    .boxcollection{
+        margin-right: 0;
+    }
     .boxcollectionboxes{
         width: 12rem;
         height: 70%;
@@ -632,7 +646,7 @@ header{
 }
 @media (min-width:600px) and (max-width:972px){
     .section2{
-        margin-left: 1rem;
+        margin-left: 0;
         padding-right:2rem;
     }
     .Trending{
@@ -677,7 +691,7 @@ header{
 }
 @media (max-width:572px){
     .section2{
-        margin-left: 1rem;
+        margin-left:0;
         padding-right:1em;
     }
     .Trending{
@@ -827,6 +841,7 @@ header{
 }
 @media (min-width:600px) and (max-width:972px){
     .section3{
+        margin-right: 1rem;
         background-color: rgb(225, 228, 230);
         margin-top: 5rem;
         margin-bottom: 5rem;
@@ -873,6 +888,7 @@ header{
  @media (max-width:572px){
     .container3{
         margin-bottom:0;
+        margin-left: 0;
     }
     
     
@@ -885,6 +901,7 @@ header{
         border-radius: 2rem;
         padding-left:1rem;
         padding-right:1rem;
+        margin-right: 0;
     }
     .topgames{
         height: 14rem;
