--- a/lugx.css
+++ b/lugx.css
@@ -713,7 +713,7 @@ header{
         padding-right:1em;
     }
     .Trending{
-        margin-left: 1rem;
+        margin-left: 0;
     }
     .Trendingh6{
         margin-left: 1rem;
